  * Add a python3-lpbuildd binary package.
  * Fix LXD.run to not default to universal_newlines=True.
  * Run on Python 3 when built for >= bionic.
  * Add some notes on the production deployment.
  * lpbuildd/binarypackage.py: Use "apt-get indextargets" and "apt-helper
    cat-file" where they exist to read Packages files, rather than looking
    in /var/lib/apt/lists/ directly.

  [ Dimitri John Ledkov ]
  * lxd: Add riscv64 to arch table.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 28 Apr 2020 10:19:27 +0100

launchpad-buildd (189) xenial; urgency=medium

  * Fix closing tar files in OCI builds

 -- Tom Wardill <tom.wardill@canonical.com>  Thu, 09 Apr 2020 10:38:47 +0000

launchpad-buildd (188) xenial; urgency=medium

  * Fix cwd for OCI builds, allows Dockerfile parameter.

 -- Tom Wardill <tom.wardill@canonical.com>  Wed, 01 Apr 2020 14:02:00 +0000

launchpad-buildd (187) xenial; urgency=medium

  [ Colin Watson ]
  * Make lpbuildd.snap compatible with Twisted >= 17.1.0, which drops
    support for passing an unqualified port to strports.service.

  [ Tom Wardill ]
  * Prototype Docker image building support.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 18 Mar 2020 14:22:03 +0000

launchpad-buildd (186) xenial; urgency=medium

  * Fix sbuildrc compatibility with xenial's sbuild.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 06 Jan 2020 15:03:00 +0000

launchpad-buildd (185) xenial; urgency=medium

  [ Dimitri John Ledkov ]
  * Stop installing ltsp-server for i386 livefs-builders. Edubuntu product
    that used that is long dead, and the package itself is now removed
    from focal.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 16 Dec 2019 21:47:28 +0000

launchpad-buildd (184) xenial; urgency=medium

  * Adjust sbuildrc to handle various changes in bionic's sbuild.
  * Configure LXD when creating a target rather than in the postinst.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 12 Dec 2019 13:03:26 +0000

launchpad-buildd (183) xenial; urgency=medium
